Fixed indentation and coding style
